--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
             </div>
             <div class="profile">
                 <img src="src/img/img-avatar.png" alt="">
-                <p class="profile-name">D.Kargaev</p>
-                <p class="profile-stat">367 views today</p>
+                <div class="profile-name">
+                    D. Kargaev
+                </div>
+                <p>@345 views</p>
             </div>
         </nav>
     </header>
