--- a/index.html
+++ b/index.html
@@ -54,10 +54,18 @@
             </div>
             <div class="profile">
                 <img src="src/img/img-avatar.png" alt="">
-                <div class="profile-name">
-                    D. Kargaev
+                <div class="profile-subs">
+                    <div class="profile-name">
+                        D. Kargaev
+                    </div>
+                    <p>367 views today</p>
                 </div>
-                <p>@345 views</p>
+            </div>
+            <div class="other-icon">
+                <img src="src/img/more-horizontal.png" alt="">
+                <div class="icon-text">
+                    <p>OTHER</p>
+                </div>
             </div>
         </nav>
     </header>
