--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                 <div class="profile-subs">
                     <div class="profile-name">
                         D. Kargaev
+                        <p class="you">YOU</p>
                     </div>
-                    <p>367 views today</p>
+                    <p>367 views today</p> <span>+32 </span><img src="src/img/arrow-up-right.png" alt="">
                 </div>
             </div>
             <div class="other-icon">
